this first save

--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Crystal Project</title>
+  <link rel="stylesheet" href="style.css">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <header>
+    <div class="container">
+      <nav>
+        <div class="logo">
+          <a href="#"><img src="images/logo/Group.png" alt=""></a>
+        </div>
+        <div class="naviation">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Help</a></li>
+          </ul>
+
+          <div class="link">
+            <img src="images/icon/Group 108.png" alt="">
+            <img class="basket" src="images/icon/ion_basket.png" alt="">
+          </div>
+        </div>
+      </nav>
+
+
+
+      <div class="hero-area">
+
+      </div>
+    </div>
+  </header>
 </body>
 </html>
