html and css add code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- header section from start -->
   <header>
     <div class="container">
       <nav>
@@ -31,13 +32,52 @@
           </div>
         </div>
       </nav>
-
-
-
+  <!-- hero area start from here -->
       <div class="hero-area">
-
+        <div class="hero-area-left">
+          <h2><span class="wel">Welcome to</span> <br> Pop Rock Crystal Shop!</h2>
+          <p>Here you will find unique phone accessories, crystals, <br> jewelry and more. Free shipping inside the U.S. and our <br> phone grips come with a limited warranty. Enjoy!
+          </p>
+          <div class="btn">
+            <button>shop now</button>
+            <a href="#">about us</a>
+          </div>
+        </div>
+        <div class="hero-area-right">
+          <div class="hero-area-right-content">
+            <div class="hero-area-image">
+              <img src="./images/another-image/Rectangle 228.png" alt="">
+            </div>
+            <div class="new-lot">
+              <h4>New lot</h4>
+            </div>
+            <div class="hero-inner-image">
+              <img src="./images/another-image/Без имени-1 1.png" alt="">
+            </div>
+            <div class="hero-image-footer">
+              <img class="border" src="./images/another-image/Rectangle 230.png" alt="">
+              <h5>Crystal Agate Phone Grip <span class="dollar" >- 18.99$</span></h5>
+            </div>
+          </div>
+        </div>
       </div>
+      
     </div>
+    
   </header>
+  <!-- header section end -->
+
+  <!-- hero area start from here -->
+  <!-- <div class="curve-area">
+    <img src="./images/another-image/Vector 1.png" alt="">
+    <div class="arrow-btn">
+      <img src="./images/another-image/Group 113.png" alt="">
+    </div>
+    <div class="scroll-btn">
+      <img src="./images/another-image/Group 103.png" alt="">
+    </div>
+  </div> -->
+
+
 </body>
 </html>
