--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crystal Project</title>
+  <!-- css -->
   <link rel="stylesheet" href="./css/style.css">
+  <!-- fontawesome cdn -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,22 +65,87 @@
         </div>
       </div>
       
+      <!-- curve area start from here -->
+    <div class="curve-area">
+      <div class="curve-area-img">
+        <img src="./images/another-image/Vector 1.png" alt="">
+        <div class="arrow-btn">
+          <img src="./images/another-image/Group 113.png" alt="">
+        </div>
+        <div class="scroll-btn">
+          <img src="./images/another-image/Group 103.png" alt="">
+        </div>
+      </div>
     </div>
-    
+    </div>
+  <!-- curve area end -->
   </header>
   <!-- header section end -->
 
-  <!-- hero area start from here -->
-  <!-- <div class="curve-area">
-    <img src="./images/another-image/Vector 1.png" alt="">
-    <div class="arrow-btn">
-      <img src="./images/another-image/Group 113.png" alt="">
-    </div>
-    <div class="scroll-btn">
-      <img src="./images/another-image/Group 103.png" alt="">
-    </div>
-  </div> -->
+<!-- main section start -->
+  <main class="main">
+    <div class="container">
+      <div class="product">
+        <h2>All product</h2>
+        <div class="filter-area">
+          <a class="filter" href="#"><span>Sort: </span>Best Selling <i class="fa-solid fa-caret-down"></i></a>
+          <a class="filter" href="#"><span>Filter: </span>All Products <i class="fa-solid fa-caret-down"></i></a>
+        </div>
+      </div>
 
+      <div class="product-card">
+        <div class="card-1">
+          <img src="./images/another-image/Без имени-1 1.png" alt="">
+          <h5 class="card-title">Crystal Agate Phone Grip <br> <span>18.99$</span> </h5>
+          <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="card-1">
+          <img src="./images/another-image/Без имени-1 1.png" alt="">
+          <h5 class="card-title">Crystal Agate Phone Grip <br> <span>18.99$</span> </h5>
+          <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="card-1">
+          <img src="./images/another-image/Без имени-1 1.png" alt="">
+          <h5 class="card-title">Crystal Agate Phone Grip <br> <span>18.99$</span> </h5>
+          <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="card-1">
+          <img src="./images/another-image/Без имени-1 1.png" alt="">
+          <h5 class="card-title">Crystal Agate Phone Grip <br> <span>18.99$</span> </h5>
+          <button class="buy-now">Buy Now</button>
+        </div>
+      </div>
+
+      <div class="product-card">
+        <div class="card-1">
+          <img src="./images/another-image/Без имени-1 1.png" alt="">
+          <h5 class="card-title">Crystal Agate Phone Grip <br> <span>18.99$</span> </h5>
+          <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="card-1">
+          <img src="./images/another-image/Без имени-1 1.png" alt="">
+          <h5 class="card-title">Crystal Agate Phone Grip <br> <span>18.99$</span> </h5>
+          <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="card-1">
+          <img src="./images/another-image/Без имени-1 1.png" alt="">
+          <h5 class="card-title">Crystal Agate Phone Grip <br> <span>18.99$</span> </h5>
+          <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="card-1">
+          <img src="./images/another-image/Без имени-1 1.png" alt="">
+          <h5 class="card-title">Crystal Agate Phone Grip <br> <span>18.99$</span> </h5>
+          <button class="buy-now">Buy Now</button>
+        </div>
+      </div>
+      <div class="view-all">
+        <button>View All</button>
+      </div>
+    </div>
+  </main>
+  <!-- main section end -->
+  
+  
 
 </body>
 </html>
