update html and css

--- a/index.html
+++ b/index.html
@@ -142,10 +142,43 @@
         <button>View All</button>
       </div>
     </div>
+
+
+    <div class="container">
+      <div class="best-price">
+        <div class="vector-image">
+          <img src="./images/another-image/Vector 2(1).png" alt="">
+        </div>
+        <div class="best-price-left">
+          <div class="best-price-content">
+            <h4><span class="price">BEST PRICE</span> <br> Agate Phone Grip</h4>
+            <div class="dollar-rate">
+              <del>44.50$</del>
+              <span class="d2">19.50$</span>
+            </div>
+            <p>These Pop Rock Crystal grip tops can be swapped with <br> other tops depending on your mood, outfit, nails, <br> phone case, holiday, etc.! Just gently squeeze the sides <br> to remove and swap out with another color or design!
+            </p>
+            <button class="best-btn">Buy Now</button>
+          </div>
+        </div>
+
+        <div class="best-price-right">
+          <img src="./images/another-image/Ellipse 9(1).png" alt="">
+          <img src="./images/another-image/Ellipse 11(1).png" alt="">
+          <img class="ellipse" src="./images/another-image/Ellipse 10.png" alt="">
+          <img class="grip" src="./images/another-image/Без имени-1 1.png" alt="">
+        </div>
+      </div>
+    </div>
   </main>
   <!-- main section end -->
+
+  <!-- footer start -->
+  <footer>
+    
+  </footer>
   
-  
+  <!-- footer end -->
 
 </body>
 </html>
