change html and css

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
       <div class="view-all">
         <button>View All</button>
       </div>
-    </div>
 
 
-    <div class="container">
+      <!-- best price section start -->
+
       <div class="best-price">
         <div class="vector-image">
           <img src="./images/another-image/Vector 2(1).png" alt="">
@@ -161,7 +161,7 @@
             <button class="best-btn">Buy Now</button>
           </div>
         </div>
-
+  
         <div class="best-price-right">
           <img src="./images/another-image/Ellipse 9(1).png" alt="">
           <img src="./images/another-image/Ellipse 11(1).png" alt="">
@@ -169,6 +169,7 @@
           <img class="grip" src="./images/another-image/Без имени-1 1.png" alt="">
         </div>
       </div>
+      <!-- best price section start -->
     </div>
   </main>
   <!-- main section end -->
